<resources>
    <string name="app_name">Meditate</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_meditation_session">Meditation Session</string>

    <string name="fabTransition" translatable="false">fabTransition</string>
    <string name="timerTransition" translatable="false">timerTransition</string>
    <string name="timeMinutesTransition" translatable="false">timeMinutesTransition</string>
    <string name="plus_x_min">+%d min</string>
    <string name="minus_x_min">-%d min</string>
    <string name="delete">Delete</string>
    <string name="new_session">New Session</string>
    <string name="statistics">Statistics</string>
    <string name="session_log">Session Log</string>
    <string name="abort_incomplete_session">Abort incomplete session?</string>
    <string name="abort">Abort</string>
    <string name="x_min">%1$d min</string>
    <string name="x_h_y_min">%1$d h %2$d min</string>
    <string name="x_s">%1$d s</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="current_run_streak">Current Run Streak</string>
    <string name="best_run_streak">Best Run Streak</string>
    <string name="number_of_sessions">Number of Sessions</string>
    <string name="average_session_length">Average Completed Session Length</string>
    <string name="total_meditation_time">Total Meditation Time</string>
    <string name="including_today">incl. today</string>
    <string name="excluding_today">excl. today</string>
    <string name="run_streak_indicator">Run Streak Indicator</string>
    <string name="meditation_session_in_progress">Meditation session in progress</string>

    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="sessions_selected">
        <item quantity="one">%s session selected</item>
        <item quantity="other">%d sessions selected</item>
    </plurals>
    <plurals name="starting_session">
        <item quantity="one">Starting session in %1$d second…</item>
        <item quantity="other">Starting session in %1$d seconds…</item>
    </plurals>
</resources>
