<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="me.stanislav_nikolov.meditate.SitFragment"
    android:background="@color/primary_light">

    <android.support.design.widget.FloatingActionButton
        app:fabSize="normal"
        android:transitionName="@string/fabTransition"
        android:id="@+id/fabStartStop"
        android:src="@drawable/ic_play_arrow_white_24dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.FloatingActionButton" />

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        app:cardMaxElevation="20dp"
        android:id="@+id/timerView"
        android:transitionName="@string/timerTransition"
        android:layout_marginTop="16dp"
        android:layout_height="228dp"
        android:layout_width="320dp"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="10 min"
                android:transitionName="@string/timeMinutesTransition"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Display3"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <RelativeLayout
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonMinusTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/minus_x_min"
                    style="@style/Base.Widget.AppCompat.Button.Borderless" />

                <Button
                    android:id="@+id/buttonPlusTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/plus_x_min"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="126dp"
        android:layout_height="152dp"
        android:id="@+id/imageView"
        android:layout_gravity="start|bottom"
        android:elevation="20dp"
        android:src="@drawable/meditation_drawable" />

</FrameLayout>
